# shapes_lib

./: README.md  pyproject.toml
shapes/: circle.py  exception.py  shape.py  triangle.py
tests/: test_circle.py  test_triangle.py
