[project]
name = "shape-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Shishkov",email = "shishkoffandrey@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
